--- a/_notebooks/2020-03-22-jaimito.ipynb
+++ b/_notebooks/2020-03-22-jaimito.ipynb
@@ -1,10 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Fastpages Notebook Blog Post\n",
     "> A tutorial of fastpages for Jupyter notebooks.\n",
@@ -13,7 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- image: images/chart-preview.png\n"
+    "- image: images/chart-preview.png"
    ]
   },
   {
